<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="360dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="14dp"
    app:cardElevation="10dp"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="14dp"
        android:background="@drawable/card_bg">

        <!-- Icono centrado -->
        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_square"
            android:padding="8dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/service_title_example" />

        <TextView
            android:id="@+id/txtItemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:text="@string/service_title_example"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtItemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:background="@drawable/price_pill"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/service_price_example"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtItemDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_gradient_green"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/quick_access"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnComprar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_buy"
            android:background="@drawable/btn_gradient"
            android:textColor="@color/white"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textAllCaps="false" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
